Mon Jul 15 1996  Jim Kingdon  <kingdon@cyclic.com>

	* README: Add note about tab stop setting.

Fri Jun  7 13:07:37 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Change INITIALIZE_SOCKET_SUBSYSTEM to
	SYSTEM_INITIALIZE to reflect change in ../src/main.c.

Mon Jun 03 01:00:08 1996  noel  <noel@BOAT_ANCHOR>

	* sanity.sh: include new tests from ../src/sanity.sh.

	* filesubr.c (copy_file): use open with O_CREAT instead of creat
 	so we can also use O_BINARY -- we don't want to do any LF -> CR/LF
 	translations when we copy files.

Fri May 17 11:53:13 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: In a few places it used to say "server" when it meant
	"client".  Fix it.  Say explicitly that there is no server on NT.
	Fix typos (4,0 -> 4.0; CVS.system -> CVS).

Thu May 16 16:52:45 1996  Noel Cragg  <noel@gargle.rain.org>

	* README: explain which utilities are required for client support
 	and local support in separate paragraphs.

	* filesubr.c (expand_wild): rename max to cvs_max to avoid
 	conflicts with other already-defined routines.
	(get_homedir): rename min to cvs_min.

Thu May 16 01:18:22 1996  noel  <noel@BOAT_ANCHOR>

	* sanity.sh: Hacked version of src/sanity.sh for use under
 	CYGWIN32.

	* filesubr.c (expand_wild): Since FindFirstFile and FindNextFile
 	don't return the pathname of a file, we need to keep track of it
 	ourselves.

	* options.h: Fix defines for DIFF and GREP. 

	* run.c (run_exec): Flush stdout and stderr so we end up with the
 	correct interleaving of output for sanity.sh.  This can be removed
 	later, if desired.

Wed May 15 23:51:49 1996  Noel Cragg  <noel@gargle.rain.org>

	* README: mention that grep is mandatory.

Tue May 14 1996  Jim Kingdon  <kingdon@cyclic.com>

	* filesubr.c (cvs_temp_name): Call _tempnam not tmpnam.

Tue May 14 13:38:51 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (cvs_temp_name): New function..

Wed May 01 01:28:41 1996  noel  <noel@BOAT_ANCHOR>
