@@ -1,3 +1,7 @@
+Mon Aug 12 14:45:16 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* config.h: Remove CLIENT_ONLY; it is nowhere used.
+
 Mon Jul 15 1996  Jim Kingdon  <kingdon@cyclic.com>
 
 	* README: Add note about tab stop setting.
